# web3

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierrc.json  .solhint.json  ABOUT.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  hardhat.config.js  package.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
bash/deployment-scripts/: README.md  deploy-contract.sh  start-node.sh
c/crypto-lib/: README.md
c/crypto-lib/include/: keccak.h
c/crypto-lib/src/: keccak.c
cairo/starknet-token/: README.md  Scarb.toml
cairo/starknet-token/src/: token.cairo
clarity/stacks-token/: Clarinet.toml  README.md
clarity/stacks-token/contracts/: sip-010-token.clar
contracts/src/: DEXContract.sol  NFTCollection.sol  TestToken.sol
contracts/test/: DEXContract.test.js  NFTCollection.test.js
cpp/include/: MatchingEngine.hpp  Order.hpp  OrderBook.hpp
cpp/src/: MatchingEngine.cpp  OrderBook.cpp  main.cpp
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  FAQ.md  PERFORMANCE.md  QUICKSTART.md  ROADMAP.md  SECURITY.md  TESTING.md
examples/: README.md
go/cosmos-sdk-module/: README.md
go/cosmos-sdk-module/x/token/keeper/: keeper.go
go/cosmos-sdk-module/x/token/types/: codec.go  msg.go  types.go
go/eth-rpc-client/: README.md  main.go
haskell/cardano-plutus/: README.md  cardano-plutus.cabal
haskell/cardano-plutus/src/: SimpleToken.hs
html-css/dapp-landing/: README.md  app.js  index.html  styles.css
ink/polkadot-token/: Cargo.toml  README.md
ink/polkadot-token/src/: lib.rs
java/web3j-wallet/: README.md  pom.xml
java/web3j-wallet/src/main/java/com/web3/wallet/: WalletApp.java
kotlin/android-wallet/: README.md  build.gradle.kts
kotlin/android-wallet/app/src/main/java/com/web3/wallet/: WalletManager.kt
motoko/icp-token/: README.md  dfx.json
motoko/icp-token/src/: Token.mo
move/aptos-token/: Move.toml  README.md
move/aptos-token/sources/: token.move
python/web3-cli/: README.md  requirements.txt  setup.py
python/web3-cli/src/web3cli/: __init__.py  cli.py  client.py
python/web3-cli/tests/: test_client.py
reputation-system/: CMakeLists.txt  README.md  hardhat.config.js  package.json
reputation-system/contracts/src/: DeveloperReputation.sol
reputation-system/cpp/include/: GitHubMetrics.hpp  ReputationCalculator.hpp
reputation-system/cpp/src/: ReputationCalculator.cpp  demo.cpp
rust/solana-token-program/: Anchor.toml  README.md
rust/solana-token-program/programs/token-program/: Cargo.toml
rust/solana-token-program/programs/token-program/src/: lib.rs
scripts/: deploy-nft.js  deploy.js
swift/WalletSDK/: Package.swift  README.md
swift/WalletSDK/Sources/WalletSDK/: Wallet.swift
typescript/wallet-connect-dapp/: README.md  package.json
typescript/wallet-connect-dapp/src/: App.tsx  WalletConnect.tsx  config.ts
vyper/erc20-token/: README.md  Token.vy
web3/src/: DEXClient.js  example.js
