cabal-version:      2.4
name:               cardano-plutus
version:            0.1.0.0
synopsis:           Simple token contract in Plutus
author:             Web3 Developer
maintainer:         developer@example.com
category:           Blockchain

library
    exposed-modules:  SimpleToken
    build-depends:    base ^>=4.14.3.0
                    , plutus-tx
                    , plutus-ledger-api
                    , plutus-script-utils
                    , plutus-core
                    , bytestring
                    , serialise
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
                      -fobject-code
                      -fno-ignore-interface-pragmas
                      -fno-omit-interface-pragmas
                      -fno-strictness
                      -fno-spec-constr
                      -fno-specialise
